Old garbage config.cache.* metadata might block catalog cache refreshes

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • CAR Team 2024-10-28, CAR Team 2024-11-11, CAR Team 2024-11-25, CAR Team 2024-12-23
    • 200
    • 2
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      6.0 binaries expect that the collection version has a Timestamp, which was introduced as part of the 4.4 FCV -> 5.0 FCV transition in PM-1965. However, it could happen that due  the poor resiliency that DDL operations had in the past there is some garbage config.cache.* metadata that wasn't properly cleaned up and that doesn't contain Timestamps.  This is not a problem until the customer decides to use again that namespace:  then that garbage will be read, trying to understand which is the latest metadata locally persisted on the shard. However, because it doesn't contains a timestamp, it will crash with a unnamed error code, blocking refreshes (routing and filtering) over that namespace.

            Assignee:
            Robert Sander
            Reporter:
            Sergi Mateo Bellido
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: