SERVER-95807 Drop the ShardServerCatalogCacheLoader persisted cache if it contains corrupted data (#28861)

GitOrigin-RevId: 3d5d7784e7c18af59be94a30b01521e5bad669e0